[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -19,5 +19,14 @@ body {
 .img-medium {
     height: 200px;
 }
+#wesbite {
+    border: 2px solid blue;
+    position: absolute;
+    width: 130px;
+    height: 15px;
+    top: 50px;
+    left: 140px;
+    
+}
 
 
