[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -20,7 +20,7 @@ body {
 .img-medium {
     height: 200px;
 }
-#wesbite {
+#website {
     border: 2px solid blue;
     position: absolute;
     top: 50px;
